static/css/style.css
@import url('https://fonts.googleapis.com/css?family=Bowlby+One|Rubik&display=swap');

body {
    background-color: #f5edd3;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

main {
    flex: 1 0 auto;
  }

.nav-wrapper,
footer {
    background-color: #f1d785;
    color: #000;
}

nav ul a {
    color: #000;
}

.sidenav {
    background-color: #f5edd3;
}

.brand-logo {
    font-family: 'Bowlby One', cursive;
    background-color: #f1d785;
    color: #fff;
    /*padding: 1.25rem;*/
    margin-top: 0;
}

.brand-logo span {
    color: #ab8b4d;
}

.brand-logo img {
    display: inline-block;
    vertical-align: middle;
    height: 55px;
    width: auto;
}

h2 {
    font-family: 'Bowlby One', cursive;
    color: #ab8b4d;
}

h6 {
    font-family: 'Rubik', sans-serif;
}

.intro {
    font-family: cursive;
    text-align: center;
}

.intro span {
    color: #ff5722;
}

p {
    text-align: center;   
    font-family: 'Rubik', sans-serif;
}

.browse-button {
    margin: 1rem;
}

p a {
    color: #ff5722;
}

hr {
    height: 0.2rem;
    background-color: #3b89cf;
    border: none;
}

.home-image {
    margin: 1rem 0;
    width: 100%;
}

.letter_array {
    margin-top: 1rem;
    color: #039BE5;
}   

.btn {
    width: 100%;
}

.letter_array a strong {
    color: #ff5722;
}

.card {
    height: 410px;
}

.card .card-content {
    padding: 10px 10px 0;
}

.card-content button {
    width: 100%;
    color: #fff;
}

.card-answer {
    margin-bottom: 5px;
    background-color: #fff;
}
.card-answer p {
    border: 1px solid #ff5722;
    border-radius: 2px;
    padding: 4px;
    color: #ff5722;
}

.card, .card-reveal {
    background-color: #f0f2bf5c;
}

.card-image img {
    border: 3px solid #ab8b4d;
    height: 175px;
}

.card a {
    width: 100%;
}

.card-content a {
    text-decoration: underline;
}

.thumb-icons {
    margin: 0 15px;
}

.thumb-icons .like {
    color: green; 
}

.thumb-icons .dislike {
    color: red;
}

.icon-large {
    font-size: 35px;
}

.flashes .success {
    background-color: green;
    color: white;
    height: 2.5rem;
    padding-top: 0.5rem;
    border-radius: 10px;
}

.flashes .warning {
    background-color: orange;
    color: white;
    height: 2.5rem;
    padding-top: 0.5rem;
    border-radius: 10px;
}

.flashes .error {
    background-color: red;
    color: white;
    height: 2.5rem;
    padding-top: 0.5rem;
    border-radius: 10px;
}

.form-surround {
    border: 2px solid #ab8b4d;
    border-radius: 10px;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

#thumbnail {
    /*display: inline;*/
    height: 50px;
    width: 50px;
}

#x-icon {
    background-color: red;
    color: white;
}

table {
    width: 100%;
    margin: 10px;
}

.errors {
    background-color: red;
    color: #fafafa;
    height: 2.5rem;
    padding-top: 0.5rem;
}

.disclaimer {
    text-align: right;
}

